# essentia_llm_plugin

./: Cargo.toml  README.md
src/: cli.rs  flexforge.rs  lib.rs  main.rs
src/core/: anon.rs  copilot.rs  external_llm.rs  grok.rs  logger.rs  mod.rs  parser.rs  runtime.rs  xctid.rs
src/errors/: mod.rs
src/essentia/: base64.rs  cookies.rs  crypto.rs  html.rs  http.rs  json.rs  mod.rs  multipart.rs  regex.rs  tls.rs  url.rs  uuid.rs
src/impl/: mod.rs
src/traits/: mod.rs
src/types/: mod.rs
